feat: allow stopping active trace jobs
